--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,18 @@
 {
-	// "build": {
-	// 	"dockerfile": "Dockerfile"
-	// },
-	"image": "nvcr.io/nvidia/pytorch:22.08-py3",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
+	// "image": "nvcr.io/nvidia/pytorch:22.08-py3",
 	"runArgs": [
-		"--name", "pytorch2",	// コンテナの名前を指定
+		"--name", "pytorch_dl_programming",	// コンテナの名前を指定
 		"--gpus", "all",		// GPUの利用
 		"--shm-size", "32g",	// shared memoryのサイズ指定
-		"-v", ".:/workspace/my_src",	// ディレクトリの共有
+		"-v", "src:/workspace/my_src",	// ディレクトリの共有
 		"-it",	// ターミナルを利用するためのオプション
 		// "--rm"	// コンテナから抜けるとコンテナを自動削除。コンテナを再利用したければコメントアウト
 	],
 	"name": "pytorch_deeplearning_programming",
-	"workspaceFolder": "/workspaces",
+	// "workspaceFolder": "/workspaces",
 
 	// Configure tool-specific properties.
 	"customizations": {
