modified to execute RUN command.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,10 +8,10 @@ RUN pip install -U pip \
 RUN useradd -m -d /home/dev-user -s /bin/bash dev-user
 USER dev-user
 
-# RUN apt-get dist-upgrade -y\
-#     && apt-get update \
-#     && apt-get install build-essential \
-#     && apt-get install graphviz \
-#     && apt-get autoremove -y \
-#     && apt-get clean \
-#     && rm -rf /usr/local/src/*
+RUN apt-get dist-upgrade -y\
+    && apt-get update \
+    && apt-get install build-essential \
+    # && apt-get install graphviz \
+    && apt-get autoremove -y \
+    && apt-get clean \
+    && rm -rf /usr/local/src/*
